fix search placeholder on safari

--- a/src/styles/components/search.css
+++ b/src/styles/components/search.css
@@ -38,6 +38,8 @@
 
 .area.search .search .input::placeholder {
   font-weight: 300;
+
+  color: var(--text);
   opacity: var(--dim-opacity);
 
   user-select: none;
